--- a/index.html
+++ b/index.html
@@ -11,34 +11,49 @@
 </head>
 
 <body>
-
+    <div class='header'>
+        <h1>ROCK, PAPER, SCISSORS</h1>
+    </div>
     <div class="container">
-        <div class="playerbtn">
+        <div>
             <button id="rockbtn">Rock</button>
         </div>
-        <div class="playerbtn">
+        <div>
             <button id="paperbtn">Paper</button>
         </div>
-        <div class="playerbtn">
+        <div>
             <button id="scissorsbtn">Scissors</button>
         </div>
     </div>
 
     <div class="container">
-        <div id="showplayer1">
-            <h3>Player 1:</h3>
+        <div>
+            <h3>PLAYER:</h3>
             <div id="showp"></div>
         </div>
-        <div id="showplayer2">
-            <h3>Player 2:</h3>
+        <div>
+            <h3>COMPUTER:</h3>
             <div id="showcomp"></div>
         </div>
-        <div id="showwinner">
-            <h3>Winner:</h3>
+        <div>
+            <h3>WINNER:</h3>
             <div id="showres"></div>
         </div>
     </div>
 
+    <div class="container">
+        <div class="ptscontainer">
+            <h3>PLAYER 1 POINTS:</h3>
+            <div class="showpts" id="player1pts">0</div>
+        </div>
+        <div class="ptscontainer">
+            <h3>PLAYER 2 POINTS:</h3>
+            <div class="showpts" id="player2pts">0</div>
+        </div>
+        <div>
+            <button id="newgame">NEW GAME</button>
+        </div>
+    </div>
 
 </body>
 
